--- a/nirah/core/Cargo.toml
+++ b/nirah/core/Cargo.toml
@@ -16,6 +16,7 @@ pnet = "0.22.0"
 ipnetwork = "0.14.0"
 nirah-sip = { path = "../../crates/sip" }
 nirah-uri = { path = "../../crates/uri" }
+nirah-sdp = { path = "../../crates/sdp" }
 nom = "5.0.1"
 futures-preview = "0.3.0-alpha.19"
 chrono = { version = "0.4.9", features = ["serde"] }
