--- a/nirah/nirah/Cargo.toml
+++ b/nirah/nirah/Cargo.toml
@@ -13,6 +13,7 @@ path = "src/bin/nirah.rs"
 [dependencies]
 nirah-core = { path = "../core" }
 nirah-sip = { path = "../../crates/sip" }
+nirah-sdp = { path = "../../crates/sdp" }
 nirah-uri = { path = "../../crates/uri" }
 chrono = "0.4.9"
 tokio = "0.2.0-alpha.6"
@@ -23,6 +24,5 @@ log = "0.4.8"
 simple_logger = "1.3.0"
 ascii_table = "2.0.0"
 gstreamer = "0.14.5"
-webrtc-sdp = "0.3.1"
 rodio = "0.9.0"
 alsa = "0.1.2"
