--- a/nirah/core/Cargo.toml
+++ b/nirah/core/Cargo.toml
@@ -22,4 +22,4 @@ futures-preview = "0.3.0-alpha.19"
 chrono = { version = "0.4.9", features = ["serde"] }
 base64 = "0.11.0"
 glib = { version = "0.8.2", optional = true }
-gstreamer = { version = "0.14.5", optional = true }
+gstreamer = { version = "0.14.5", features = ["v1_14"], optional = true }
