--- a/nirah/nirah/Cargo.toml
+++ b/nirah/nirah/Cargo.toml
@@ -11,7 +11,7 @@ name = "nirah"
 path = "src/bin/nirah.rs"
 
 [dependencies]
-nirah-core = { path = "../core", features = ["glib", "gstreamer"] }
+nirah-core = { path = "../core" }
 nirah-sip = { path = "../../crates/sip" }
 nirah-sdp = { path = "../../crates/sdp" }
 nirah-uri = { path = "../../crates/uri" }
@@ -23,5 +23,4 @@ clap = "2.33.0"
 log = "0.4.8"
 simple_logger = "1.3.0"
 ascii_table = "2.0.0"
-rodio = "0.9.0"
 alsa = "0.1.2"
