--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -15,6 +15,7 @@ log = "0.4.8"
 pnet = "0.23.0"
 ipnetwork = "0.15.0"
 libsip = { git = "https://github.com/Bytebuddha/libsip" }
+libsdp = { git = "https://github.com/Bytebuddha/libsdp" }
 nom = "5.0.1"
 futures-preview = "0.3.0-alpha.19"
 chrono = { version = "0.4.9", features = ["serde"] }
