--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -7,16 +7,16 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-trait = "0.1.14"
-tokio = "0.2.0-alpha.6"
-serde = { version = "1.0.101", features = ["derive"] }
-serde_json = "1.0.41"
+async-trait = "0.1.19"
+tokio = { version = "0.2.1", features = ["full"] }
+serde = { version = "1.0.103", features = ["derive"] }
+serde_json = "1.0.42"
 log = "0.4.8"
 pnet = "0.23.0"
-ipnetwork = "0.15.0"
+ipnetwork = "0.15.1"
 libsip = { git = "https://github.com/Bytebuddha/libsip" }
 libsdp = { git = "https://github.com/Bytebuddha/libsdp" }
 nom = "5.0.1"
-futures-preview = "0.3.0-alpha.19"
-chrono = { version = "0.4.9", features = ["serde"] }
+futures = "0.3.1"
+chrono = { version = "0.4.10", features = ["serde"] }
 base64 = "0.11.0"
