--- a/nirah/Cargo.toml
+++ b/nirah/Cargo.toml
@@ -13,10 +13,10 @@ path = "src/bin/nirah.rs"
 [dependencies]
 nirah-core = { path = "../core" }
 libsip = { git = "https://github.com/Bytebuddha/libsip" }
-chrono = "0.4.9"
-tokio = "0.2.0-alpha.6"
-async-trait = "0.1.14"
-serde_json = "1.0.40"
+chrono = "0.4.10"
+tokio = { version = "0.2.1", features = ["full"] }
+async-trait = "0.1.19"
+serde_json = "1.0.42"
 clap = "2.33.0"
 log = "0.4.8"
 simple_logger = "1.3.0"
