--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = []
+gst = ["gstreamer", "glib"]
+
 [dependencies]
 async-trait = "0.1.19"
 tokio = { version = "0.2.1", features = ["full"] }
@@ -20,3 +24,5 @@ nom = "5.0.1"
 futures = "0.3.1"
 chrono = { version = "0.4.10", features = ["serde"] }
 base64 = "0.11.0"
+gstreamer = { version = "0.15.0", optional = true }
+glib = { version = "0.9.0", optional = true }
